# py-tidy

./: LICENSE  README.md  pyproject.toml
src/py_tidy/: __init__.py  control_block_spacer.py
